Integração do agendamento ao backend

--- a/src/pages/agendar/styles.css
+++ b/src/pages/agendar/styles.css
@@ -6,4 +6,8 @@
 .calendario{
     background-color: whitesmoke;
     font-size: medium;
+    width: 100% !important;
+    height: 320px !important;
+
 }
+
